--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -6,9 +6,11 @@
   color-scheme: light;
   --md-primary: 72 147 218;
   --md-on-primary: 255 255 255;
-  --md-surface: 255 255 255;
+  /*--md-surface: 244 249 254;*/
   /* 244 249 254; */
-  /*  --md-surface-variant: 228 240 250; */
+  /*  --md-surface-variant: 228 240 250;*/
+    --md-surface: 255 255 255;
+    --md-surface-variant: 255 255 255;
   --md-surface-container: 255 255 255;
   --md-outline: 194 210 228;
   --md-text: 17 36 56;
