--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -11,7 +11,7 @@
   /*  --md-surface-variant: 228 240 250;*/
     --md-surface: 255 255 255;
     --md-surface-variant: 255 255 255;
-  --md-surface-container: 255 255 255;
+  --md-surface-container: 228 240 250;;
   --md-outline: 194 210 228;
   --md-text: 17 36 56;
   --md-text-secondary: 75 102 132;
